--- a/webapp/index.html
+++ b/webapp/index.html
@@ -30,7 +30,7 @@
   </section>
 
   <footer>
-    <p>BookMyShow | DevOps Project 🚀</p>
+    <p>BookMyShow | DevOps Project </p>
   </footer>
 
   <script src="script.js"></script>
